<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.foody.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="com.example.foody.ui.ListItem.ListItemFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_listitem" />

    <fragment
        android:id="@+id/navigation_note"
        android:name="com.example.foody.ui.note.NoteFragment"
        android:label="@string/title_note"
        tools:layout="@layout/fragment_note" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.foody.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.foody.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>